--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src=" " alt="">
+                <img src="assets/images/team_05.jpg " alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
