--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <a class="nav-link" href="online.html">Online tutor</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="teacher.html">Become a tutor</a>
+                <a class="nav-link" href="teacher.html">Register</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About Us</a>
@@ -110,7 +110,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/t9.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/aw1.jfif" alt="" height="250px"></a>
               <div class="down-content">
                 <a href="#"><h4> Awoke Dejenie </h4></a>
                 <a href="#"><h4> aweke@gmail.com </h4></a>
@@ -137,7 +137,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/t8.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/aw.jpg" alt="" height="250px"></a>
               <div class="down-content">
                 <a href="#"><h4>Tefera Molla</h4></a>
                 <a href="#"><h4> tefera2111@gmail.com </h4></a>
@@ -166,7 +166,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/t14.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/t14.jpg" alt="" height="250px"></a>
               <div class="down-content">
                 <a href="#"><h4>Amsalu Mekuria</h4></a>
                 <a href="#"><h4> amsalumekuria5@gmail.com </h4></a>
@@ -195,7 +195,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/t17.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/t17.jpg" height="250px" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Abebe Tizazu</h4></a>
                 <a href="#"><h4> abebetizazu157@gmail.com </h4></a>
@@ -223,10 +223,10 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/t1.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/aw2.jfif" height="250px"alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Lemlem Brhanu</h4></a>
-                <a href="#"><h4> lemlembrhan330@gmail.com </h4></a>
+                <a href="#"><h4>samson kebede</h4></a>
+                <a href="#"><h4> samie330@gmail.com </h4></a>
                 <a href="#"><h4> +251-960 763 034  </h4></a>
                 <div style="display: flex;">
                   <h6  > 150/hr </h6>
@@ -251,11 +251,11 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/t12.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/t12.jpg"height="250px"alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Yohhans Dires </h4></a>
-                <a href="#"><h4> yohanns@gmail.com </h4></a>
-                <a href="#"><h4> +251-967 859 241  </h4></a>
+                <a href="#"><h4>almaz worku </h4></a>
+                <a href="#"><h4> alemie@gmail.com </h4></a>
+                <a href="#"><h4> +251-968 859 241  </h4></a>
                 <div style="display: flex;">
                   <h6  > 250/hr </h6>
                  
