--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <a class="nav-link" href="online.html">Online tutor</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="teacher.html">Become a tutor</a>
+                <a class="nav-link" href="teacher.html">Register</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About Us</a>
