--- a/online.html
+++ b/online.html
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="online.html">Online tutor</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="teacher.html">Become a tutor</a>
+                <a class="nav-link" href="teacher.html">Register</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About Us</a>
