--- a/teacher.html
+++ b/teacher.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <a class="nav-link" href="online.html">Online tutor</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="teacher.html">Become a tutor</a>
+                <a class="nav-link" href="teacher.html">Register</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About Us</a>
@@ -156,7 +156,7 @@ https://templatemo.com/tm-546-sixteen-clothing
      
     </div>
     <div class="col-md-4">
-      <img class="mt-4" style="width: 400px;height: 700px;" src="assets/images/t7.jpg"/>
+      <img class="mt-4" style="width: 500px;height: 700px;" src="assets/images/aw7.jpg"/>
     </div>
     
     <footer>
